# Escape-of-the-Fox

./: CMakeLists.txt  README.md  generate_solution.bat  notes.txt  premake.bat
Escape of the Fox/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
assets/level_01/: backgroundBack  tilemap.txt
assets/level_02/: tilemap.txt
src/: Animation.cpp  Animation.h  Animation.hpp  BeeSwarm.cpp  BeeSwarm.hpp  Camera.cpp  Camera.h  Camera.hpp  Cock.cpp  Cock.hpp  Enemy.cpp  Enemy.hpp  Engine.cpp  Engine.h  Engine.hpp  Entity.cpp  Entity.h  Entity.hpp  Game.cpp  Game.h  GameCompleteScene.cpp  GameCompleteScene.h  GameCompleteScene.hpp  GameObject.cpp  GameObject.h  GameObject.hpp  GameScene.cpp  GameScene.h  Level.cpp  Level.h  Level.hpp  LevelScene.cpp  LevelScene.h  LevelScene.hpp  MainMenu.cpp  MainMenu.hpp  MenuButton.cpp  MenuButton.h  MenuButton.hpp  MenuScene.cpp  (+25 more)
